Corrected styling for index page pdf buttons on small screens

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -26,7 +26,7 @@ body {
   font-size: 18px;
   padding-top: 0px;
   margin-bottom: 232px;
-  background-color: @light-grey;
+  background-color: @white;
 }
 
 .red {
@@ -70,7 +70,7 @@ body {
 }
 
 .navbar .container {
-  min-width: 620px;
+  min-width: 600px;
 }
 
 .navbar-brand img {
@@ -426,10 +426,8 @@ li p.lead {
   padding-bottom: 70px;
 }
 
-.sectionb {
-  background-color: transparent;
-  padding-top: 50px;
-  padding-bottom: 70px;
+#section1b {
+  background-color: @light-grey;
 }
 
 .sectionc {
@@ -440,7 +438,8 @@ li p.lead {
   padding-right: 70px;
 }
 
-.section .btn {
+.section .btn,
+.sectionb .btn {
   margin: 20px 0 0 12px;
 }
 
